@@ -1,3 +1,9 @@
+2003-04-04  Elena Zannoni  <ezannoni@redhat.com>
+
+        * x86-64-tdep.c (x86_64_push_arguments): Handle correctly the
+        signed integer case.
+        (classify_argument): Handle enumerations and references.
+
 2003-04-04  Andrew Cagney  <cagney@redhat.com>
 
 	* frame.c (create_sentinel_frame): Initialize the sentinel frame's
